# MNISTFromScratch

./: CMakeLists.txt  README.md  download_dataset.sh
include/: LinearLayer.hpp  NN.hpp  NeuralNetwork.hpp  loadDataset.hpp  load_dataset.hpp  matrix.hpp  training.hpp
src/: LinearLayer.cpp  NN.cpp  NeuralNetwork.cpp  loadDataset.cpp  load_dataset.cpp  main.cpp  matrix.cpp  training.cpp
